# translation-bot

./: .gitignore  .pre-commit-config.yaml  Procfile  README.md  __main__.py  main.py  pyproject.toml  requirements.txt  whatsapp-spam.py
.github/: dependabot.yml
.github/workflows/: format-and-lint.yml
cogs/: admin.py  crawler.py  errors.py  general.py  help.py  library.py  termer.py  translation.py
core/: bot.py
core/views/: ButtonView.py  linkview.py
databases/: blocked.py  data.py  mongo.py
languages/: languages.py  sites.py  terms.py
scripts/: auto-restart.sh  git_update.sh  server-restart.sh
src/: __init__.py
src/assets/: __init__.py  categories.py  colors.py  languages.py  sites.py  terms.py
src/core/: __init__.py  bot.py  env.py  logger.py
src/core/views/: __init__.py  checkview.py  inviteview.py
src/core/views/paginators/: __init__.py  buttons.py  classic.py  lazy.py
src/database/: __init__.py  models.py  mongo.py
src/ext/: __init__.py  admin.py  crawler.py  errors.py  library.py  translator.py  utility.py
src/utils/: __init__.py  base_session.py  eval.py  scrape.py  translate.py
utils/: category.py  connector.py  handler.py  hints.py  progress.py  selector.py  translate.py
